Fix player missing page

--- a/cmd/webserver/templates/player_missing.gohtml
+++ b/cmd/webserver/templates/player_missing.gohtml
@@ -21,7 +21,7 @@
                         <div class="alert alert-primary" role="alert">Showing production queues</div>
                     {{ end }}
 
-                    <div data-queue="Profiles" class="mb-2">
+                    <div data-queue="Players" class="mb-2">
                         <h5>Player Queue</h5>
                         <div id="profiles"><i class="fas fa-spinner fa-spin fa-fw"></i></div>
                     </div>
