--- a/cmd/webserver/templates/stats.gohtml
+++ b/cmd/webserver/templates/stats.gohtml
@@ -33,6 +33,21 @@
                     <i class="fas fa-spinner fa-spin"></i>
                 </div>
 
+                <h5 class="">Game DB Player Levels</h5>
+                <div class="chart mb-4" id="player-levels">
+                    <i class="fas fa-spinner fa-spin"></i>
+                </div>
+
+                <h5>App Scores</h5>
+                <div class="chart mb-4" id="scores">
+                    <i class="fas fa-spinner fa-spin"></i>
+                </div>
+
+                <h5>App Release Dates</h5>
+                <div class="chart mb-0" id="release-dates">
+                    <i class="fas fa-spinner fa-spin"></i>
+                </div>
+
                 <h5>App Types</h5>
                 <div class="table-responsive mb-4">
                     <table class="table table-hover table-striped" data-order='[[1, "desc"]]' id="app-types">
@@ -54,20 +69,10 @@
                         <tr>
                             <td>Total:</td>
                             <td></td>
-                            <td nowrap="nowrap" id="total-price">{{ .TypeTotal }}</td>
+                            <td nowrap="nowrap" id="total-price"></td>
                         </tr>
                         </tfoot>
                     </table>
-                </div>
-
-                <h5>App Scores</h5>
-                <div class="chart mb-4" id="scores">
-                    <i class="fas fa-spinner fa-spin"></i>
-                </div>
-
-                <h5>Release Dates</h5>
-                <div class="chart mb-0" id="release-dates">
-                    <i class="fas fa-spinner fa-spin"></i>
                 </div>
 
             </div>
