Add players to xp page

--- a/cmd/webserver/assets/sass/_experience.scss
+++ b/cmd/webserver/assets/sass/_experience.scss
@@ -1,3 +1,10 @@
-#experience-page tr[data-level] {
-    cursor: pointer;
+#experience-page {
+    table {
+
+        table-layout: fixed;
+
+        tr[data-level] {
+            cursor: pointer;
+        }
+    }
 }
