--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -237,9 +237,9 @@
                                 <tr>
                                     <th scope="row">Steam Prices</th>
                                     <td class="img">
-                                        <a href="https://www.steamprices.com/uk/app/{{ .App.ID }}/{{ slug .App.GetName }}" target="_blank">
+                                        <a href="https://www.steamprices.com/{{ .UserProductCC.ProductCode }}/app/{{ .App.ID }}/{{ slug .App.GetName }}" target="_blank">
                                             <img src="https://pbs.twimg.com/profile_images/598791990084575232/KonQ1bk8_400x400.png" alt="Steam Prices">
-                                            https://steamprices.com/uk/app/{{ .App.ID }}/{{ slug .App.GetName }}
+                                            https://steamprices.com/{{ .UserProductCC.ProductCode }}/app/{{ .App.ID }}/{{ slug .App.GetName }}
                                         </a>
                                     </td>
                                 </tr>
