--- a/cmd/webserver/templates/experience.gohtml
+++ b/cmd/webserver/templates/experience.gohtml
@@ -59,11 +59,11 @@
                                             <div class="name">{{ comma .Level }}</div>
                                         </div>
                                     </td>
-                                    <td>{{ comma .Start }}</td>
-                                    <td>{{ comma .End }}</td>
-                                    <td>{{ comma .Diff }}</td>
-                                    <td>{{ comma .GetFriends }}</td>
-                                    <td>{{ comma .Players }}</td>
+                                    <td class="nowrap">{{ comma .Start }}</td>
+                                    <td class="nowrap">{{ comma .End }}</td>
+                                    <td class="nowrap">{{ comma .Diff }}</td>
+                                    <td class="nowrap">{{ comma .GetFriends }}</td>
+                                    <td class="nowrap">{{ comma .Players }}</td>
                                 </tr>
                             {{ end }}
                         </table>
