Shorten Twitch link

--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -227,9 +227,9 @@
                                     <tr>
                                         <th scope="row">Twitch</th>
                                         <td class="img">
-                                            <a href="https://www.twitch.tv/directory/game/{{ pathEscape .App.TwitchURL }}" target="_blank">
+                                            <a href="https://twitch.tv/directory/game/{{ pathEscape .App.TwitchURL }}" target="_blank">
                                                 <img src="https://assets.help.twitch.tv/Glitch_Purple_RGB.png" alt="Twitch">
-                                                https://twitch.tv/directory/game/{{ .App.TwitchURL }}
+                                                twitch.tv/directory/game/{{ .App.TwitchURL }}
                                             </a>
                                         </td>
                                     </tr>
